<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:padding="20dp"
        android:text="@string/q1"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:width="100dp"
            android:paddingVertical="20dp"
            android:onClick="onYesClick"
            android:text="@string/yes_button" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:width="100dp"
            android:paddingVertical="20dp"
            android:onClick="onNoClick"
            android:text="@string/no_button" />

    </LinearLayout>

    <Button
        android:id="@+id/cheatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:width="100dp"
        android:paddingVertical="20dp"
        android:onClick="onCheatClick"
        android:text="@string/cheat_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:width="100dp"
            android:paddingVertical="20dp"
            android:onClick="onPrevClick"
            android:text="@string/prev_button" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:width="100dp"
            android:paddingVertical="20dp"
            android:onClick="onNextClick"
            android:text="@string/next_button" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:layout_marginTop="100dp"
        android:onClick="onRestartClick"
        android:paddingVertical="20dp"
        android:text="Restart" />


</LinearLayout>